[package]
name = "m_server"
version = "0.2.0-alpha"
status = "alpha"
edition = "2021"
description = "A minimal HTTP server framework for delivering JSON data. \nALPHA: NOT READY FOR PRODUCTION!"
license = "GPL-3.0-only"
authors = ["Kyle Yannelli"]
repository = "https://github.com/kyleyannelli/m_server"
keywords = ["http", "server", "framework"]
categories = ["web-programming"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
log4rs = "1.2.0"
regex = "1.10.2"
threadpool = "1.8.1"
